--- a/store-template/products_list1.html
+++ b/store-template/products_list1.html
@@ -31,7 +31,7 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="products.html">Каталог</a>
+                        <a class="nav-link" href="products_list1.html">Каталог</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#"><i class="fas fa-shopping-bag"></i></a>
@@ -54,7 +54,7 @@
                 <h1 class="my-4">Store</h1>
                 <div class="list-group">
                     <a href="/products_list1.html" class="list-group-item">Услуги</a>
-                    <a href="#" class="list-group-item">Наши врачи</a>
+                    <a href="/doctors_paje.html" class="list-group-item">Наши врачи</a>
                     <!-- <a href="#" class="list-group-item">Обувь</a>
                     <a href="#" class="list-group-item">Аксессуары</a>
                     <a href="#" class="list-group-item">Подарки</a> -->
@@ -96,9 +96,6 @@
 
                     <div class="col-lg-4 col-md-6 mb-4">
                         <div class="card h-100">
-                            <a href="#">
-                                <img class="card-img-top" src="vendor/img/products/Adidas-hoodie.png" alt="">
-                            </a>
                             <div class="card-body">
                                 <h4 class="card-title">
                                     Осмотр и консультация
@@ -106,17 +103,13 @@
                                 <h5>6 090,00 руб.</h5>
                             </div>
                             <div class="card-footer text-center">
-                                <button type="button" class="btn btn-outline-success">Записаться</button>
+                                <button type="button" class="btn btn-outline-success" ><a href="/book?select0=5">Записаться</a></button>
                             </div>
                         </div>
                     </div>
 
                     <div class="col-lg-4 col-md-6 mb-4">
                         <div class="card h-100">
-                            <a href="#">
-                                <img class="card-img-top" src="vendor/img/products/Blue-jacket-The-North-Face.png"
-                                    alt="">
-                            </a>
                             <div class="card-body">
                                 <h4 class="card-title">
                                     Лечение кариеса и пульпита
@@ -124,17 +117,13 @@
                                 <h5>23 725,00 руб.</h5>
                             </div>
                             <div class="card-footer text-center">
-                                <button type="button" class="btn btn-outline-success">Записаться</button>
+                                <button type="button" class="btn btn-outline-success" ><a href="/book?select0=5">Записаться</a></button>
                             </div>
                         </div>
                     </div>
 
                     <div class="col-lg-4 col-md-6 mb-4">
                         <div class="card h-100">
-                            <a href="#">
-                                <img class="card-img-top"
-                                    src="vendor/img/products/Brown-sports-oversized-top-ASOS-DESIGN.png" alt="">
-                            </a>
                             <div class="card-body">
                                 <h4 class="card-title">
                                     Эндодонтическое лечение
@@ -142,17 +131,13 @@
                                 <h5>3 390,00 руб.</h5>
                             </div>
                             <div class="card-footer text-center">
-                                <button type="button" class="btn btn-outline-success">Записаться</button>
+                                <button type="button" class="btn btn-outline-success" ><a href="/book?select0=5">Записаться</a></button>
                             </div>
                         </div>
                     </div>
 
                     <div class="col-lg-4 col-md-6 mb-4">
                         <div class="card h-100">
-                            <a href="#">
-                                <img class="card-img-top" src="vendor/img/products/Black-Nike-Heritage-backpack.png"
-                                    alt="">
-                            </a>
                             <div class="card-body">
                                 <h4 class="card-title">
                                     Ортопедическое лечение
@@ -160,16 +145,13 @@
                                 <h5>2 340,00 руб.</h5>
                             </div>
                             <div class="card-footer text-center">
-                                <button type="button" class="btn btn-outline-success">Записаться</button>
+                                <button type="button" class="btn btn-outline-success" ><a href="/book?select0=5">Записаться</a></button>
                             </div>
                         </div>
                     </div>
 
                     <div class="col-lg-4 col-md-6 mb-4">
                         <div class="card h-100">
-                            <a href="#">
-                                <img class="card-img-top" src="vendor/img/products/Black-Dr-Martens-shoes.png" alt="">
-                            </a>
                             <div class="card-body">
                                 <h4 class="card-title">
                                     Ортодонтическое лечение
@@ -177,17 +159,13 @@
                                 <h5>13 590,00 руб.</h5>
                             </div>
                             <div class="card-footer text-center">
-                                <button type="button" class="btn btn-outline-success">Записаться</button>
+                                <button type="button" class="btn btn-outline-success" ><a href="/book?select0=5">Записаться</a></button>
                             </div>
                         </div>
                     </div>
 
                     <div class="col-lg-4 col-md-6 mb-4">
                         <div class="card h-100">
-                            <a href="#">
-                                <img class="card-img-top"
-                                    src="vendor/img/products/Dark-blue-wide-leg-ASOs-DESIGN-trousers.png" alt="">
-                            </a>
                             <div class="card-body">
                                 <h4 class="card-title">
                                     Хирургическое лечение
@@ -195,7 +173,7 @@
                                 <h5>2 890,00 руб.</h5>
                             </div>
                             <div class="card-footer text-center">
-                                <button type="button" class="btn btn-outline-success">Записаться</button>
+                                <button type="button" class="btn btn-outline-success" ><a href="/book?select0=5">Записаться</a></button>
                             </div>
                         </div>
                     </div>
@@ -203,9 +181,6 @@
 
                     <div class="col-lg-4 col-md-6 mb-4">
                         <div class="card h-100">
-                            <a href="#">
-                                <img class="card-img-top" src="vendor/img/products/Adidas-hoodie.png" alt="">
-                            </a>
                             <div class="card-body">
                                 <h4 class="card-title">
                                     Лечение травм зубов
@@ -213,17 +188,13 @@
                                 <h5>6 090,00 руб.</h5>
                             </div>
                             <div class="card-footer text-center">
-                                <button type="button" class="btn btn-outline-success">Записаться</button>
+                                <button type="button" class="btn btn-outline-success" ><a href="/book?select0=5">Записаться</a></button>
                             </div>
                         </div>
                     </div>
 
                     <div class="col-lg-4 col-md-6 mb-4">
                         <div class="card h-100">
-                            <a href="#">
-                                <img class="card-img-top" src="vendor/img/products/Blue-jacket-The-North-Face.png"
-                                    alt="">
-                            </a>
                             <div class="card-body">
                                 <h4 class="card-title">
                                     Лечение пародонтита
@@ -231,17 +202,13 @@
                                 <h5>23 725,00 руб.</h5>
                             </div>
                             <div class="card-footer text-center">
-                                <button type="button" class="btn btn-outline-success">Записаться</button>
+                                <button type="button" class="btn btn-outline-success" ><a href="/book?select0=5">Записаться</a></button>
                             </div>
                         </div>
                     </div>
 
                     <div class="col-lg-4 col-md-6 mb-4">
                         <div class="card h-100">
-                            <a href="#">
-                                <img class="card-img-top"
-                                    src="vendor/img/products/Brown-sports-oversized-top-ASOS-DESIGN.png" alt="">
-                            </a>
                             <div class="card-body">
                                 <h4 class="card-title">
                                     Удаление зубного налета и отбеливание зубов
@@ -249,7 +216,7 @@
                                 <h5>3 390,00 руб.</h5>
                             </div>
                             <div class="card-footer text-center">
-                                <button type="button" class="btn btn-outline-success">Записаться</button>
+                                <button type="button" class="btn btn-outline-success" ><a href="/book?select0=5">Записаться</a></button>
                             </div>
                         </div>
                     </div>
