--- a/store-template/index.html
+++ b/store-template/index.html
@@ -31,7 +31,7 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="products.html">Каталог <i class="fas fa-shopping-bag"></i> </a>
+                        <a class="nav-link" href="products_list1.html">Каталог <i class="fas fa-shopping-bag"></i> </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="auth/login.html">Войти <i class="fas fa-sign-in-alt"></i></a>
@@ -76,7 +76,7 @@
                         помочь сохранить здоровье Ваших зубов и дать Вам красивую и здоровую улыбку!
                     </p>
                     <button id="start-purchase-btn" type="button" class="btn btn-lg">
-                        <a id="start-purchase-link" href="products.html">
+                        <a id="start-purchase-link" href="products_list1.html">
                             Начать покупки
                         </a>
                     </button>
